k8s/stacks/lorawan/base/ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: basic-station-wss
  namespace: lorawan
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`eu1.lorawan.qtrn.io`) || Host(`eu1.lorawan.brad.technology`)) && (PathPrefix(`/traffic`) || PathPrefix(`/router-info`) || PathPrefix(`/station`))
      kind: Rule
      priority: 100
      services:
        - name: gateway-bridge
          port: 3001
  tls:
    secretName: lorawan-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chirpstack-web
  namespace: lorawan
spec:
  entryPoints:
    - websecure
  routes:
    - match: (Host(`eu1.lorawan.qtrn.io`) || Host(`eu1.lorawan.brad.technology`)) && PathPrefix(`/api`)
      kind: Rule
      priority: 80
      services:
        - name: chirpstack
          port: 8090
    - match: Host(`eu1.lorawan.qtrn.io`) || Host(`eu1.lorawan.brad.technology`)
      kind: Rule
      priority: 50
      services:
        - name: chirpstack
          port: 8080
  tls:
    secretName: lorawan-tls
